--- a/src/orderapp/view/intro/Intro.form
+++ b/src/orderapp/view/intro/Intro.form
@@ -7,6 +7,16 @@
     </constraints>
     <properties/>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="d071b" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="36"/>
+          <text value="Order Application"/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
